--- a/README
+++ b/README
@@ -1,7 +1,7 @@
-litecoin-seeder
+bitmark-seeder
 ===============
 
-Litecoin-seeder is a crawler for the Litecoin network, which exposes a list
+Bitmark-seeder is a crawler for the Bitmark network, which exposes a list
 of reliable nodes via a built-in DNS server.
 
 Features:
